# template-python-library

./: CHANGELOG.md  README.md  cookiecutter.json
hooks/: post_gen_project.py  post_gen_project.sh
{{cookiecutter.repo_name}}/: .coveragerc  .gitignore  .mdlrules.rb  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Pipfile  README.md  conftest.py  pyproject.toml  setup.cfg  ssot.py
{{cookiecutter.repo_name}}/doc/source/: conf.py  index.rst  usage.rst
{{cookiecutter.repo_name}}/test/: test_{{cookiecutter.repo_name}}.py
{{cookiecutter.repo_name}}/tests/: test_{{cookiecutter.repo_name}}.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: __init__.py  __main__.py  cli.py  config.py  core.py  utils.py  {{cookiecutter.project_name}}.py  {{cookiecutter.repo_name}}.py
