[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["Greg Henry <greg.henry@mail.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = ""
keywords = []
classifiers = []

[tool.poetry.dependencies]
python ="^3.9"
pudb = "^2021.1"
click = "^8.0.1"
"ruamel.yaml" = "^0.17.16"
dotmap = "^1.3.24"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
flake8-bugbear = "^21.9.1"
mypy = "^0.910"
black = "^21.9b0"
isort = "^5.9.3"
pre-commit = "^2.15.0"
pytest = "^6.2.5"
pytest-sugar = "^0.9.4"
pytest-cov = "^2.12.1"
twine = "^3.4.2"
types-click = "^7.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
{{cookiecutter.project_name}} = "{{cookiecutter.repo_name}}.cli:main"

[tool.pytest]
testpaths = "tests"

[tool.mypy]
files = ["{{cookiecutter.repo_name}}", "tests"]
# exclude = ""
follow_imports = "silent"
strict = true
ignore_missing_imports = true
show_column_numbers = true
show_error_codes = true

[tool.black]
line_length = 88
# exclude = ""

[tool.isort]
profile = "black"
# skip = ""
