[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["Greg Henry <greg.henry@mail.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = ""
keywords = []
classifiers = []

[tool.poetry.dependencies]
python ="^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
{{cookiecutter.project_name}} = "{{cookiecutter.repo_name}}.cli:main"

[tool.poetry.extras]
test = ["pytest", "coverage"]
doc = ["sphinx"]

[tool.pytest]
testpaths = "test"

[tool.mypy]
files = ["{{cookiecutter.repo_name}}", "test"]
follow_imports = "silent"
strict = true
ignore_missing_imports = true
show_column_numbers = true
show_error_codes = true

[tool.black]
line_length = 88

[tool.isort]
profile = "black"
